--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,35 +1,68 @@
 {
-  "name": "vite-project",
+  "name": "@bm/web",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "test": "vitest run --coverage",
+    "test:watch": "vitest",
+    "test:a11y": "vitest run tests/a11y/pages-a11y.spec.ts",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.14",
-    "@tanstack/react-query": "^5.90.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router": "^7.9.4",
-    "tailwindcss": "^4.1.14"
+    "@bm/aria": "workspace:*",
+    "@bm/domain": "workspace:*",
+    "@bm/policies": "workspace:*",
+    "@bm/runtime": "workspace:*",
+    "@bm/sdk": "workspace:*",
+    "@bm/ui": "workspace:*",
+    "@bm/validation": "workspace:*",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/context-zone": "^1.10.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.52.0",
+    "@opentelemetry/instrumentation": "^0.52.0",
+    "@opentelemetry/instrumentation-fetch": "^0.52.0",
+    "@opentelemetry/resources": "^1.9.0",
+    "@opentelemetry/sdk-trace-web": "^1.9.0",
+    "@opentelemetry/semantic-conventions": "^1.22.0",
+    "@tanstack/react-query": "^5.66.8",
+    "framer-motion": "^11.11.17",
+    "gsap": "^3.12.5",
+    "i18next": "^23.15.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.4",
+    "react-router-dom": "^6.28.0",
+    "sonner": "^2.0.7",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/gsap": "^3.0.4",
+    "@types/node": "^20.17.16",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.2",
     "@vitejs/plugin-react-swc": "^4.1.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "globals": "^15.11.0",
+    "playwright": "^1.49.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.14.0",
+    "vite": "^5.4.11",
+    "vitest": "^1.6.0",
+    "vitest-axe": "^0.1.0"
   }
 }
