--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=https://api.beneficiomutuo.test
-VITE_OTEL_EXPORTER_URL=https://otel.beneficiomutuo.test/v1/traces
-VITE_APP_ENV=development
+VITE_API_BASE_URL=http://localhost:3000
+VITE_TELEMETRY_ENABLED=true
+VITE_USE_MOCKS=true
