--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "bm",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "scripts": {
-    "dev": "turbo run dev --parallel",
+    "preflight": "node -e \"const v=process.version; if(!v.startsWith('v18')&&!v.startsWith('v20')){console.error('Node 18/20 requerido'); process.exit(1)}\" && pnpm -v",
+    "build:packages": "pnpm -r --filter ./packages/* run build",
+    "typecheck": "pnpm -r run typecheck",
+    "dev:web": "pnpm --filter @bm/web dev",
+    "dev": "pnpm build:packages && pnpm dev:web",
+    "clean": "rimraf node_modules packages/**/dist apps/**/dist",
     "build": "turbo run build",
+    "dev:turbo": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "format": "prettier --write .",
     "prepare": "husky install",
@@ -24,7 +34,9 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.4",
     "prettier": "^3.6.2",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.14",
+    "tsup": "^8.3.0",
     "turbo": "^2.5.8",
     "typescript": "^5.9.3",
     "vite-tsconfig-paths": "^5.1.4"
