--- a/packages/aria/tsconfig.json
+++ b/packages/aria/tsconfig.json
@@ -3,16 +3,9 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "composite": false,
     "declaration": true,
-    "module": "ESNext",
-    "target": "ES2021",
-    "moduleResolution": "Node",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": false,
-    "forceConsistentCasingInFileNames": true,
-    "jsx": "react-jsx"
+    "declarationMap": true,
+    "composite": false
   },
   "include": [
     "src/**/*",
