--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "description": "Beneficio Mutuo experience runtime for declarative scene flow orchestration.",
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    }
+  },
   "main": "dist/index.js",
-  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsup src/index.ts --dts --format esm,cjs",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "node ./scripts/run-tests.mjs"
   },
   "peerDependencies": {
@@ -20,7 +27,8 @@
   "dependencies": {},
   "devDependencies": {
     "@types/react": "^18.2.21",
-    "typescript": "^5.4.0",
+    "tsup": "^8.3.0",
+    "typescript": "^5.9.3",
     "vitest": "^1.5.0"
   }
 }
