--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -18,7 +18,8 @@
     "./hooks": "./dist/hooks/index.js"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsup src/index.ts --dts --format esm,cjs",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "eslint \"src/**/*.ts\"",
     "test": "vitest run --coverage"
   },
@@ -48,6 +49,7 @@
     "msw": "^2.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tsup": "^8.3.0",
     "typescript": "^5.9.3",
     "vitest": "^3.0.5"
   }
