--- a/packages/domain/tsconfig.json
+++ b/packages/domain/tsconfig.json
@@ -1,13 +1,32 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    /* === Núcleo de build monorepo === */
     "rootDir": "src",
     "outDir": "dist",
+
+    /* === Tipos === */
     "declaration": true,
     "declarationMap": true,
-    "emitDeclarationOnly": false,
-    "noEmitOnError": true
+    "emitDeclarationOnly": true,
+    "composite": true,
+
+    /* === Targets modernos === */
+    "module": "ESNext",
+    "target": "ES2022",
+    "moduleResolution": "NodeNext",
+
+    /* === Seguridad y compatibilidad === */
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmitOnError": true,
+
+    /* === Path resolution === */
+    "baseUrl": ".",
+    "paths": {
+      "@bm/domain/*": ["src/*"]
+    }
   },
-  "include": ["src/**/*"],
+  "include": ["src"],
   "exclude": ["dist", "node_modules"]
 }
