--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.66.8",
     "class-variance-authority": "^0.7.1",
@@ -59,8 +60,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.1.12",
-    "@radix-ui/react-toggle-group": "^1.1.9"
+    "vaul": "^1.1.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^8.4.5",
@@ -72,7 +73,8 @@
     "@types/node": "^24.6.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
-    "@vitejs/plugin-react": "^5.1.2",
+    "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.20",
     "axe-core": "^4.10.2",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^9.1.0",
@@ -86,8 +88,7 @@
     "typescript": "~5.9.3",
     "vite": "^5.4.11",
     "vitest": "^1.6.0",
-    "vitest-axe": "^0.1.0",
-    "autoprefixer": "^10.4.20"
+    "vitest-axe": "^0.1.0"
   },
   "engines": {
     "node": ">=20"
