--- a/packages/policies/tsconfig.json
+++ b/packages/policies/tsconfig.json
@@ -6,9 +6,15 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "composite": true,
-    "incremental": true
+    "composite": false,
+    "incremental": false,
+    "moduleResolution": "node",
+    "target": "es2022",
+    "module": "esnext",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
-  "include": ["src"],
-  "exclude": ["dist", "tests"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["dist", "tests", "node_modules"]
 }
