fix: align ts configs and exports for package aliases

--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -3,16 +3,10 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "composite": false,
+    "composite": true,
     "declaration": true,
-    "declarationMap": true
+    "declarationDir": "dist",
+    "emitDeclarationOnly": false
   },
-  "include": [
-    "src/**/*",
-    "types/**/*.d.ts"
-  ],
-  "exclude": [
-    "tests",
-    "dist"
-  ]
+  "include": ["src"]
 }
