--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,21 +1,18 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "composite": false,
     "rootDir": "src",
     "outDir": "dist",
+    "composite": true,
     "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "moduleResolution": "bundler",
-    "module": "ESNext",
-    "target": "ES2022",
-    "lib": ["ES2022", "DOM"],
-    "strict": true,
-    "skipLibCheck": true,
-    "types": ["vitest/globals"],
-    "jsx": "react-jsx"
+    "declarationDir": "dist",
+    "emitDeclarationOnly": false
   },
   "include": ["src"],
-  "exclude": ["dist", "tests"]
+  "references": [
+    { "path": "../domain" },
+    { "path": "../policies" },
+    { "path": "../runtime" },
+    { "path": "../aria" }
+  ]
 }
