--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,14 +15,23 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
     "baseUrl": ".",
+    "typeRoots": ["./types", "./node_modules/@types"],
     "paths": {
+      "@bm/domain": ["packages/domain/src/index.ts", "packages/domain/src/index.js"],
       "@bm/domain/*": ["packages/domain/src/*"],
+      "@bm/policies": ["packages/policies/src/index.ts", "packages/policies/src/index.js"],
       "@bm/policies/*": ["packages/policies/src/*"],
+      "@bm/runtime": ["packages/runtime/src/index.ts", "packages/runtime/src/index.js"],
       "@bm/runtime/*": ["packages/runtime/src/*"],
+      "@bm/aria": ["packages/aria/src/index.ts", "packages/aria/src/index.js"],
       "@bm/aria/*": ["packages/aria/src/*"],
+      "@bm/sdk": ["packages/sdk/src/index.ts", "packages/sdk/src/index.js"],
       "@bm/sdk/*": ["packages/sdk/src/*"],
+      "@bm/validation": ["packages/validation/src/index.ts", "packages/validation/src/index.js"],
       "@bm/validation/*": ["packages/validation/src/*"],
+      "@bm/ui": ["packages/ui/src/index.ts", "packages/ui/src/index.js"],
       "@bm/ui/*": ["packages/ui/src/*"]
     }
-  }
+  },
+  "include": ["packages", "apps", "types"]
 }
