--- a/packages/aria/tsconfig.json
+++ b/packages/aria/tsconfig.json
@@ -3,16 +3,14 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
+    "composite": true,
     "declaration": true,
-    "declarationMap": true,
-    "composite": false
+    "declarationDir": "dist",
+    "emitDeclarationOnly": false
   },
-  "include": [
-    "src/**/*",
-    "types/**/*.d.ts"
-  ],
-  "exclude": [
-    "tests",
-    "dist"
+  "include": ["src", "types"],
+  "references": [
+    { "path": "../policies" },
+    { "path": "../runtime" }
   ]
 }
