--- a/packages/domain/tsconfig.json
+++ b/packages/domain/tsconfig.json
@@ -1,32 +1,12 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    /* === Núcleo de build monorepo === */
     "rootDir": "src",
     "outDir": "dist",
-
-    /* === Tipos === */
-    "declaration": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": true,
     "composite": true,
-
-    /* === Targets modernos === */
-    "module": "ESNext",
-    "target": "ES2022",
-    "moduleResolution": "NodeNext",
-
-    /* === Seguridad y compatibilidad === */
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmitOnError": true,
-
-    /* === Path resolution === */
-    "baseUrl": ".",
-    "paths": {
-      "@bm/domain/*": ["src/*"]
-    }
+    "declaration": true,
+    "declarationDir": "dist",
+    "emitDeclarationOnly": false
   },
-  "include": ["src"],
-  "exclude": ["dist", "node_modules"]
+  "include": ["src"]
 }
