--- a/packages/policies/tsconfig.json
+++ b/packages/policies/tsconfig.json
@@ -1,20 +1,12 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist",
     "rootDir": "src",
+    "outDir": "dist",
+    "composite": true,
     "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "composite": false,
-    "incremental": false,
-    "moduleResolution": "node",
-    "target": "es2022",
-    "module": "esnext",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "declarationDir": "dist",
+    "emitDeclarationOnly": false
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["dist", "tests", "node_modules"]
+  "include": ["src"]
 }
