--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "description": "Beneficio Mutuo experience runtime for declarative scene flow orchestration.",
   "type": "module",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "default": "./dist/index.js"
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
     }
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
