--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "description": "Typed and resilient SDK for Beneficio Mutuo clients",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "default": "./dist/index.js"
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
     },
     "./api/client": "./dist/api/client.js",
     "./adapters/runtime.adapter": "./dist/adapters/runtime.adapter.js",
