--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "private": false,
   "type": "module",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "default": "./dist/index.js"
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
     },
     "./theme/tokens.css": "./src/theme/tokens.css"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --dts --format esm,cjs",
     "typecheck": "tsc -p tsconfig.json --noEmit",
