--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,25 +1,20 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ESNext",
-    "jsx": "react-jsx",
-    "strict": true,
-    "declaration": true,
-    "declarationMap": true,
-    "outDir": "dist",
     "rootDir": "src",
-    "skipLibCheck": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "typeRoots": ["./src/types", "../../node_modules/@types"] 
+    "outDir": "dist",
+    "composite": true,
+    "declaration": true,
+    "declarationDir": "dist",
+    "emitDeclarationOnly": false
   },
   "include": ["src"],
-  
+  "references": [
+    { "path": "../aria" },
+    { "path": "../domain" },
+    { "path": "../policies" },
+    { "path": "../runtime" },
+    { "path": "../sdk" },
+    { "path": "../validation" }
+  ]
 }
