--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -4,32 +4,27 @@
   "description": "Beneficio Mutuo experience runtime for declarative scene flow orchestration.",
   "type": "module",
   "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
   "files": [
     "dist"
   ],
   "sideEffects": false,
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
   "scripts": {
-    "build": "tsup src/index.ts --dts --format esm,cjs",
-    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "build": "unbuild",
+    "dev": "unbuild --stub",
+    "typecheck": "tsc -p tsconfig.json",
     "test": "node ./scripts/run-tests.mjs"
   },
   "peerDependencies": {
     "react": "^18.0.0"
   },
-  "dependencies": {},
-  "devDependencies": {
-    "@types/react": "^18.2.21",
-    "tsup": "^8.3.0",
-    "typescript": "^5.9.3",
-    "vitest": "^1.5.0"
-  }
+  "dependencies": {}
 }
