--- a/packages/aria/tsconfig.json
+++ b/packages/aria/tsconfig.json
@@ -3,14 +3,15 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "composite": true,
     "declaration": true,
-    "declarationDir": "dist",
-    "emitDeclarationOnly": false
+    "declarationMap": true,
+    "emitDeclarationOnly": false,
+    "noEmitOnError": true,
+    "composite": true,
+    "skipLibCheck": true,
+    "moduleResolution": "Bundler",
+    "esModuleInterop": true
   },
-  "include": ["src", "types"],
-  "references": [
-    { "path": "../policies" },
-    { "path": "../runtime" }
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["dist", "node_modules"]
 }
