--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -3,27 +3,24 @@
   "version": "0.1.0",
   "type": "module",
   "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
   "files": [
     "dist",
     "README.md"
   ],
   "sideEffects": false,
-  "scripts": {
-    "build": "tsup src/index.ts --dts --format esm,cjs",
-    "typecheck": "tsc -p tsconfig.json --noEmit",
-    "test": "pnpm exec tsc -p tsconfig.json && node --test tests/**/*.spec.mjs"
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
   },
-  "devDependencies": {
-    "tsup": "^8.3.0",
-    "typescript": "^5.9.3"
+  "scripts": {
+    "build": "unbuild",
+    "dev": "unbuild --stub",
+    "typecheck": "tsc -p tsconfig.json",
+    "test": "pnpm exec tsc -p tsconfig.json && node --test tests/**/*.spec.mjs"
   }
 }
