--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -4,22 +4,43 @@
   "description": "Typed and resilient SDK for Beneficio Mutuo clients",
   "type": "module",
   "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "sideEffects": false,
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     },
-    "./api/client": "./dist/api/client.js",
-    "./adapters/runtime.adapter": "./dist/adapters/runtime.adapter.js",
-    "./adapters/aria.adapter": "./dist/adapters/aria.adapter.js",
-    "./hooks": "./dist/hooks/index.js"
+    "./api/client": {
+      "types": "./dist/api/client.d.ts",
+      "import": "./dist/api/client.mjs",
+      "require": "./dist/api/client.cjs"
+    },
+    "./adapters/runtime.adapter": {
+      "types": "./dist/adapters/runtime.adapter.d.ts",
+      "import": "./dist/adapters/runtime.adapter.mjs",
+      "require": "./dist/adapters/runtime.adapter.cjs"
+    },
+    "./adapters/aria.adapter": {
+      "types": "./dist/adapters/aria.adapter.d.ts",
+      "import": "./dist/adapters/aria.adapter.mjs",
+      "require": "./dist/adapters/aria.adapter.cjs"
+    },
+    "./hooks": {
+      "types": "./dist/hooks/index.d.ts",
+      "import": "./dist/hooks/index.mjs",
+      "require": "./dist/hooks/index.cjs"
+    }
   },
   "scripts": {
-    "build": "tsup src/index.ts --dts --format esm,cjs",
-    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "build": "unbuild",
+    "dev": "unbuild --stub",
+    "typecheck": "tsc -p tsconfig.json",
     "lint": "eslint \"src/**/*.ts\"",
     "test": "vitest run --coverage"
   },
@@ -40,17 +61,5 @@
     "@bm/runtime": "workspace:*",
     "@bm/aria": "workspace:*",
     "nanoid": "^5.0.7"
-  },
-  "devDependencies": {
-    "@tanstack/react-query": "^5.62.7",
-    "@testing-library/react": "^16.1.0",
-    "@types/node": "^22.9.0",
-    "@vitest/coverage-v8": "^3.0.5",
-    "msw": "^2.7.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tsup": "^8.3.0",
-    "typescript": "^5.9.3",
-    "vitest": "^3.0.5"
   }
 }
