--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "*.{ts,tsx,js,jsx,json,css,md}": "prettier --write"
   },
   "devDependencies": {
+    "@nx/js": "^21.6.5",
     "@tailwindcss/vite": "^4.1.14",
-    "@nx/js": "^19.8.3",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.4",
+    "nx": "^21.6.5",
     "prettier": "^3.6.2",
-    "nx": "^19.8.3",
     "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
