--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -10,7 +10,9 @@
     "composite": true,
     "skipLibCheck": true,
     "moduleResolution": "Bundler",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "jsx": "react-jsx",
+    "types": ["react", "react-dom"]
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules"]
