--- a/packages/runtime/tsconfig.json
+++ b/packages/runtime/tsconfig.json
@@ -1,19 +1,16 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.web.json",
   "compilerOptions": {
+    "composite": true,
     "rootDir": "src",
     "outDir": "dist",
     "declaration": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": false,
-    "noEmitOnError": true,
-    "composite": true,
-    "skipLibCheck": true,
-    "moduleResolution": "Bundler",
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "types": ["react", "react-dom"]
+    "declarationMap": true    
   },
-  "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules"]
+  "include": ["src"],
+  "references": [
+    { "path": "../domain" },
+    { "path": "../policies" },
+    { "path": "../aria" }
+  ]
 }
