--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Typed and resilient SDK for Beneficio Mutuo clients",
   "type": "module",
+  "source": "src/index.ts",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -14,35 +15,42 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.mjs"
     },
     "./api/client": {
       "types": "./dist/api/client.d.ts",
       "import": "./dist/api/client.mjs",
-      "require": "./dist/api/client.cjs"
+      "require": "./dist/api/client.cjs",
+      "default": "./dist/api/client.mjs"
     },
     "./adapters/runtime.adapter": {
       "types": "./dist/adapters/runtime.adapter.d.ts",
       "import": "./dist/adapters/runtime.adapter.mjs",
-      "require": "./dist/adapters/runtime.adapter.cjs"
+      "require": "./dist/adapters/runtime.adapter.cjs",
+      "default": "./dist/adapters/runtime.adapter.mjs"
     },
     "./adapters/aria.adapter": {
       "types": "./dist/adapters/aria.adapter.d.ts",
       "import": "./dist/adapters/aria.adapter.mjs",
-      "require": "./dist/adapters/aria.adapter.cjs"
+      "require": "./dist/adapters/aria.adapter.cjs",
+      "default": "./dist/adapters/aria.adapter.mjs"
     },
     "./hooks": {
       "types": "./dist/hooks/index.d.ts",
       "import": "./dist/hooks/index.mjs",
-      "require": "./dist/hooks/index.cjs"
-    }
+      "require": "./dist/hooks/index.cjs",
+      "default": "./dist/hooks/index.mjs"
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
     "typecheck": "tsc -p tsconfig.json",
     "lint": "eslint \"src/**/*.ts\"",
-    "test": "vitest run --coverage"
+    "test": "vitest run --coverage",
+    "prepare": "pnpm build"
   },
   "keywords": [
     "bm",
@@ -52,8 +60,15 @@
   "license": "MIT",
   "peerDependencies": {
     "@tanstack/react-query": "^5.62.7",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "vitest": "^2.0.0"
   },
   "dependencies": {
     "@bm/domain": "workspace:*",
@@ -61,5 +76,8 @@
     "@bm/runtime": "workspace:*",
     "@bm/aria": "workspace:*",
     "nanoid": "^5.0.7"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
