--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "packages/*",
     "apps/*"
   ],
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "nx": "nx",
     "build:libs": "pnpm nx run-many --target=build --projects=aria,domain,policies,runtime,validation,sdk --parallel",
@@ -15,14 +18,33 @@
     "build:web": "pnpm nx run web:build",
     "build:bm": "pnpm nx run-many --target=build --all",
     "build:storybook": "pnpm nx run storybook:build-storybook",
-    "typecheck:bm": "pnpm nx run-many --target=typecheck --all"
+    "typecheck:bm": "pnpm nx run-many --target=typecheck --all",
+    "clean": "rimraf \"packages/**/dist\" \"apps/**/dist\"",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,css,md}": "prettier --write"
   },
+  "pnpm": {
+    "overrides": {
+      "zod": "^4.1.12",
+      "zod-to-json-schema": "^3.24.6",
+      "openapi3-ts": "^4.5.0"
+    },
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "@tailwindcss/oxide",
+      "esbuild",
+      "msw",
+      "nx",
+      "protobufjs"
+    ]
+  },
   "devDependencies": {
     "@nx/js": "^21.6.5",
     "@tailwindcss/vite": "^4.1.14",
+    "@types/node": "^22.8.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "eslint": "^9.37.0",
