--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -2,6 +2,7 @@
   "name": "@bm/domain",
   "version": "0.1.0",
   "type": "module",
+  "source": "src/index.ts",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -13,13 +14,22 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
-    }
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.mjs"
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
-    "typecheck": "tsc -p tsconfig.json"
+    "typecheck": "tsc -p tsconfig.json",
+    "prepare": "pnpm build"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "engines": {
+    "node": "22.x"
   },
   "license": "MIT"
 }
