--- a/packages/policies/tsconfig.json
+++ b/packages/policies/tsconfig.json
@@ -1,17 +1,12 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.node.json",
   "compilerOptions": {
+    "composite": true,
     "rootDir": "src",
     "outDir": "dist",
     "declaration": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": false,
-    "noEmitOnError": true,
-    "composite": true,
-    "skipLibCheck": true,
-    "moduleResolution": "Bundler",
-    "esModuleInterop": true
+    "declarationMap": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules"]
+  "include": ["src"],
+  "exclude": ["dist"]
 }
