--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Beneficio Mutuo experience runtime for declarative scene flow orchestration.",
   "type": "module",
+  "source": "src/index.ts",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -14,17 +15,29 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
-    }
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.mjs"
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
     "typecheck": "tsc -p tsconfig.json",
-    "test": "node ./scripts/run-tests.mjs"
+    "test": "vitest run"
   },
   "peerDependencies": {
-    "react": "^18.0.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "vitest": "^2.0.0"
+  },
+  "engines": {
+    "node": "22.x"
+  }
 }
