--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,16 +3,24 @@
   "version": "1.0.0",
   "private": false,
   "type": "module",
+  "source": "src/index.ts",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src/theme/tokens.css"
+  ],
+  "sideEffects": false,
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.mjs"
     },
-    "./theme/tokens.css": "./src/theme/tokens.css"
+    "./theme/tokens.css": "./src/theme/tokens.css",
+    "./package.json": "./package.json"
   },
   "scripts": {
     "build": "unbuild",
@@ -24,12 +32,9 @@
     "test:a11y": "vitest run tests/a11y.spec.ts",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
-    "format": "prettier --write \"**/*.{ts,tsx,md,css}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md,css}\"",
+    "prepare": "pnpm build"
   },
-  "files": [
-    "dist",
-    "src/theme/tokens.css"
-  ],
   "dependencies": {
     "@bm/aria": "workspace:*",
     "@bm/domain": "workspace:*",
@@ -45,6 +50,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle-group": "^1.1.9",
@@ -56,14 +62,16 @@
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.545.0",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^4.1.12"
+  },
+  "peerDependencies": {
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^8.4.5",
@@ -72,9 +80,9 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^24.6.2",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
+    "@types/node": "^22.7.9",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",    
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.20",
     "axe-core": "^4.10.2",
@@ -88,10 +96,12 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.3",
     "vite": "^5.4.11",
-    "vitest": "^1.6.0",
-    "vitest-axe": "^0.1.0"
+    "vitest": "^2.0.0",
+    "vitest-axe": "^0.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "engines": {
-    "node": ">=20"
+    "node": "22.x"
   }
 }
