--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc --noEmit --project tsconfig.app.json && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
     "test": "vitest run --coverage",
@@ -33,8 +33,8 @@
     "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
     "i18next": "^23.15.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-i18next": "^15.1.4",
     "react-router-dom": "^6.28.0",
     "sonner": "^2.0.7",
@@ -47,8 +47,8 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.17.16",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.36.0",
